--- a/CollectionView/Base.lproj/Main.storyboard
+++ b/CollectionView/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="0tj-ik-Lu2">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="0tj-ik-Lu2" customClass="CollectionViewCell" customModule="CollectionView" customModuleProvider="target">
                                         <rect key="frame" x="87.666666666666671" y="0.0" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Pb5-k3-DGm">
@@ -40,13 +40,26 @@
                                                     <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Unchecked" translatesAutoresizingMaskIntoConstraints="NO" id="qgX-kb-Gjn">
+                                                    <rect key="frame" x="170" y="170" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="jXg-Px-LUG"/>
+                                                        <constraint firstAttribute="width" constant="22" id="lIr-25-vdK"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="qgX-kb-Gjn" secondAttribute="bottom" constant="8" id="ALr-Sz-WQH"/>
                                                 <constraint firstItem="3hq-Ga-bR4" firstAttribute="centerX" secondItem="Pb5-k3-DGm" secondAttribute="centerX" id="S6J-sh-8ry"/>
+                                                <constraint firstAttribute="trailing" secondItem="qgX-kb-Gjn" secondAttribute="trailing" constant="8" id="ocC-Le-Alg"/>
                                                 <constraint firstItem="3hq-Ga-bR4" firstAttribute="centerY" secondItem="Pb5-k3-DGm" secondAttribute="centerY" id="ojd-mf-d4q"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" cocoaTouchSystemColor="systemGreenColor"/>
+                                        <connections>
+                                            <outlet property="checkImage" destination="qgX-kb-Gjn" id="73R-Ne-BIm"/>
+                                            <outlet property="labelTitle" destination="3hq-Ga-bR4" id="lMZ-57-PmZ"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -65,14 +78,23 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="usP-sD-a5c">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="7tG-3V-gUd">
-                            <connections>
-                                <action selector="addItem" destination="BYZ-38-t0r" id="ZGT-rn-ZEM"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="7tG-3V-gUd">
+                                <connections>
+                                    <action selector="addItem" destination="BYZ-38-t0r" id="k6K-9d-X8T"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem enabled="NO" systemItem="trash" id="Y8r-sC-EW9">
+                                <connections>
+                                    <action selector="deleteItems" destination="BYZ-38-t0r" id="eZA-tE-fkx"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="addButton" destination="7tG-3V-gUd" id="InP-mr-Ffk"/>
                         <outlet property="collectionView" destination="OFS-IO-5jw" id="aU1-Ec-0PQ"/>
+                        <outlet property="trashButton" destination="Y8r-sC-EW9" id="gZh-l5-tEC"/>
                         <segue destination="meD-qB-3Ug" kind="show" identifier="DetailSegue" id="P08-n3-8ud"/>
                     </connections>
                 </viewController>
@@ -129,4 +151,7 @@
             <point key="canvasLocation" x="221.59999999999999" y="147.78325123152709"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Unchecked" width="22" height="22"/>
+    </resources>
 </document>
