feat: add a tabbar

--- a/CollectionView/Base.lproj/Main.storyboard
+++ b/CollectionView/Base.lproj/Main.storyboard
@@ -135,13 +135,17 @@
         <!--Navigation Controller-->
         <scene sceneID="PIZ-Pp-PKQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="z1i-D8-BR6" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="z1i-D8-BR6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RjI-Hb-rgD">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sKf-kv-buO">
+                        <rect key="frame" x="0.0" y="729" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="VYj-OT-3d9"/>
                     </connections>
